--- a/public/tuiter/explore/index.css
+++ b/public/tuiter/explore/index.css
@@ -1,7 +1,14 @@
+.wd-wrapper {
+    background-color: black;
+    padding-left: 16px;
+    padding-right: 16px;
+}
 .wd-search-bar {
     border-radius: 50px;
     background-color: darkgray;
     color: white;
+    width: 90%;
+    display: flex;
 }
 .wd-black-background {
     background-color: black
@@ -9,6 +16,19 @@
 .wd-grid-row {
     clear: both;
     display:block;
+}
+.wd-grid-thin-col {
+    width: 5%;
+    float: left;
+    text-align: center;
+    background-color: black;
+    display:block;
+}
+.wd-grid-thick-col {
+    width: 90%;
+    background-color: black;
+    display:block;
+    float: inside;
 }
 .wd-grid-link-col {
     width: 16.6666%;
@@ -20,10 +40,21 @@
     padding-top: 16px;
     padding-bottom: 18px;
 }
+.wd-grid-search-col {
+    width: 100%;
+}
 .wd-grid-full-col {
     width: 100%;
     height: 7px;
     background-color: darkgray;
+}
+.wd-gear {
+    position: absolute;
+    right: 28px;
+    top: 8px;
+    text-align: center;
+    float: left;
+    text-decoration: none;
 }
 .wd-selected-link {
     color: rgb(29,161,242);
@@ -39,13 +70,14 @@
     color: rgb(110, 118, 125);
     text-decoration: none;
     font-size: 15px;
-
 }
 .wd-post {
     background-color: black;
     color: white;
     font-weight: bold;
     border: 1px solid gray;
+    width: 100%;
+    height: 125px;
 }
 .wd-tuit-subtitle {
     font-size: 13px;
@@ -53,5 +85,11 @@
 }
 .wd-tuit-author {
     color: white;
-
+}
+.wd-post-img {
+    border-radius: 10%;
+    position: absolute;
+    right:32px;
+    height: 100px;
+    width: 100px;
 }
