--- a/public/tuiter/explore/index.css
+++ b/public/tuiter/explore/index.css
@@ -2,17 +2,17 @@
     background-color: black;
     padding-left: 16px;
     padding-right: 16px;
+    height: 100%;
+    min-height: 1250px;
 }
 .wd-search-bar {
     border-radius: 50px;
     background-color: darkgray;
     color: white;
-    width: 90%;
+    width: 85%;
     display: flex;
-}
-.wd-grid-row {
-    clear: both;
-    display:block;
+    margin-top: 16px;
+    margin-left: 16px;
 }
 .wd-grid-thin-col {
     width: 5%;
@@ -47,11 +47,13 @@
 }
 .wd-gear {
     position: absolute;
-    right: 28px;
-    top: 8px;
+    right: 42px;
+    top: 18px;
     text-align: center;
     float: left;
     text-decoration: none;
+    color: dodgerblue;
+    font-size: 25px;
 }
 .wd-selected-link {
     color: rgb(29,161,242);
@@ -68,18 +70,44 @@
     text-decoration: none;
     font-size: 15px;
 }
-.wd-post {
+.wd-post-trending {
+    padding-top: 12px;
+    padding-left: 12px;
     background-color: black;
     color: white;
     font-weight: bold;
     border: 1px solid gray;
-    width: 100%;
-    height: 125px;
+    width: 99%;
+    min-height: 113px;
+    height: fit-content;
+    justify-content: start;
+}
+.wd-post {
+    padding-top: 12px;
+    padding-left: 12px;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    border: 1px solid gray;
+    width: 99%;
+    min-height: 112px;
+    height: fit-content;
+    display: flex;
+    justify-content: start;
+}
+.wd-post-img-wrapper {
+    width: 25%;
+    display: flex;
+    justify-content: end;
+}
+.wd-75-pct-width {
+    width: 75%;
 }
 .wd-post-img {
     border-radius: 10%;
-    position: absolute;
-    right:32px;
     height: 100px;
     width: 100px;
+    justify-self: end;
+    position: relative;
+    margin-right: 12px;
 }
