--- a/public/labs/a3/index.css
+++ b/public/labs/a3/index.css
@@ -176,4 +176,343 @@ p#id-selector-2 {
     width: 20%;
     float: left;
 }
+.rotate-paragraph {
+    width: 250px;
+    height: 250px;
+    transform: rotate(90deg);
+}
+.rotate-list {
+    transform: rotate(12deg);
+    width: 100px;
+    background-color: red;
+    color: white;
+}
+.rotate-list-counterclockwise {
+    transform: rotate(-12deg);
+    width: 100px;
+    background-color: red;
+    color: white;
+}
+.rotate-list-items li {
+    width: 100px;
+    text-align: right;
+}
+.rotate-list-items li:nth-child(1) {
+    transform: rotate(-10deg);
+    background-color: yellow;
+}
+.rotate-list-items li:nth-child(2) {
+    transform: rotate(2deg);
+    background-color: blue;
+    color: white;
+}
+.rotate-list-items li:nth-child(3) {
+    transform: rotate(8deg);
+    background-color: red;
+}
+.rotate-image {
+    transform: rotate(6deg);
+}
+.rotate-table {
+    position: relative;
+    left: 50px;
+    transform: rotate(15deg);}
+.rotate-table tr:nth-child(1) {
+    background-color: black;
+    color: white;}
+.rotate-table tr:nth-child(n+2) {
+    background-color: yellow;}
+.rotate-table tr:nth-child(n+5) {
+    background-color: blue;
+    color: white;}
+.rotate-table tr:nth-child(n+8) {
+    background-color: red;}
+.rotate-table tr:nth-child(n+11) {
+    background-color: green;
+    color: white;
+}
+.gradients-linear {
+    background: linear-gradient(blue, green);
+    width: 200px;
+    height: 200px;
+}
+.gradients-radial {
+    background: radial-gradient(orange, purple);
+    width: 200px;
+    height: 200px;
+}
+.gradients-positioned {
+    background:
+            radial-gradient(
+                    at bottom right, brown, yellow);
+    width: 400px;
+    height: 200px;
+    color: blue;
+}
+.animation-keyframes {
+    position: relative;
+    top: 0px;
+    animation-duration: 7s;
+    animation-name: slidein;
+    width: 200px;
+    height: 200px;
+    background-color: red;
+    color: white;
+}
+@keyframes slidein {
+    from {
+        position: relative;
+        top: 0px;
+        font-size: 100%;
+        margin-left: 100%;
+        width: 200px;
+        height: 200px;
+        background-color: yellow;
+        color: black;
+    }
+    50% {
+        position: relative;
+        top: -200px;
+        font-size: 300%;
+        margin-left: 25%;
+        width: 400px;
+        height: 400px;
+        background-color: blue;
+        color: white;
+    }
+    to {
+        position: relative;
+        top: 0px;
+        font-size: 100%;
+        margin-left: 0%;
+        width: 200px;
+        height: 200px;
+        background-color: red;
+        color: white;
+    }
+}
+
+.animation-keyframes-inf {
+    position: relative;
+    top: 0px;
+    animation-duration: 4s;
+    animation-name: slide-inf;
+    width: 200px;
+    height: 200px;
+    background-color: green;
+    color: red;
+    animation-iteration-count: infinite;
+}
+@keyframes slide-inf {
+    from {
+        position: relative;
+        top: 0px;
+        font-size: 200%;
+        margin-left: 75%;
+        width: 20px;
+        height: 400px;
+        background-color: green;
+        color: red;
+    }
+    75% {
+        position: relative;
+        top: -10px;
+        font-size: 10%;
+        margin-left: 55%;
+        width: 400px;
+        height: 20px;
+        background-color: beige;
+        color: blueviolet;
+    }
+    to {
+        position: relative;
+        top: 0px;
+        font-size: 100%;
+        margin-left: 0%;
+        width: 200px;
+        height: 150px;
+        background-color: green;
+        color: red;
+    }
+}
+
+.animation-keyframes-alt {
+    position: relative;
+    top: 0px;
+    animation-duration: 4s;
+    animation-name: slide-alt;
+    width: 200px;
+    height: 200px;
+    background-color: black;
+    color: orange;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+@keyframes slide-alt {
+    from {
+        position: relative;
+        top: 0px;
+        font-size: 500%;
+        margin-left: 75%;
+        width: 700px;
+        height: 700px;
+        background-color: aquamarine;
+        color: black;
+    }
+    75% {
+        position: relative;
+        top: -10px;
+        font-size: 50%;
+        margin-left: 25%;
+        width: 50px;
+        height: 50px;
+        background-color: violet;
+        color: aquamarine;
+    }
+    to {
+        position: relative;
+        top: 0px;
+        font-size: 100%;
+        margin-left: 0%;
+        width: 200px;
+        height: 150px;
+        background-color: black;
+        color: orange;
+    }
+}
+.flex-container {
+    border-width: 5px;
+    border-color: black;
+    border-style: solid;
+}
+.flex-box {
+    border: 5px gray solid;
+    margin: 10px;
+    padding: 10px;
+}
+.flex-box-1 {
+    background-color: yellow;
+}
+.flex-box-2 {
+    background-color: blue;
+    color: white;
+}
+.flex-box-3 {
+    background-color: red;
+    color: white;
+}
+.flex-container {
+    border-width: 25px;
+    border-color: orange;
+    border-style: dot-dot-dash;
+    display: flex;
+}
+.flex-container-end {
+    border-width: 25px;
+    border-color: orange;
+    border-style: groove;
+    display: flex;
+    justify-content: end;
+}
+.flex-container-center {
+    border-width: 25px;
+    border-color: orange;
+    border-style: dashed;
+    display: flex;
+    justify-content: center;
+}
+.flex-container-space-around {
+    border-width: 25px;
+    border-color: orange;
+    border-style: solid;
+    display: flex;
+    justify-content: space-around;
+}
+.flex-container-space-between {
+    border-width: 25px;
+    border-color: orange;
+    border-style: outset;
+    display: flex;
+    justify-content: space-between;
+}
+.flex-container-stretch {
+    border-width: 5px;
+    border-color: black;
+    border-style: solid;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.flex-container-stretch > .flex-box-stretch {
+    flex-basis: 100%;
+}
+@media (min-width: 0px)
+and (max-width: 800px) {
+    body {
+        background-color: black;
+        color: orange;
+    }
+    p {
+        background-color: aquamarine;
+        color: orange;
+    }
+    h1 {
+        background-color: limegreen;
+        color: orchid;
+    }
+    div {
+        background-color: lightpink;
+        color: black;
+    }
+    .media-query {
+        background-color: orange;
+        color: aquamarine;
+    }
+}
+@media (min-width: 800px)
+and (max-width: 1100px) {
+    body {
+        background-color: aquamarine;
+        color: orange;
+    }
+    p {
+        background-color: purple;
+        color: chartreuse;
+    }
+    h1 {
+        background-color: lightcoral;
+        color: indigo;
+    }
+    div {
+        background-color: blue;
+        color: darkred;
+    }
+    .media-query {
+        background-color: black;
+        color: mediumpurple;
+    }
+}
+@media (min-width: 1100px)
+and (max-width: 2000px) {
+    body {
+        background-color: purple;
+        color: chartreuse;
+    }
+    p {
+        background-color: aquamarine;
+        color: orange;
+    }
+    h1 {
+        background-color: black;
+        color: mediumpurple;
+    }
+    div {
+        background-color: white;
+        color: black;
+    }
+    .media-query {
+        background-color: lightcoral;
+        color: indigo;
+    }
+}
 
