changed for you text to be black

--- a/public/tuiter/explore/index-challenge.css
+++ b/public/tuiter/explore/index-challenge.css
@@ -108,6 +108,10 @@
     margin-left: -4px;
 }
 
+.text-black {
+    color: black;
+}
+
 .list-group-item.suggested-item {
     border-bottom: none;
 }
