--- a/src/tuiter/edit-profile/index.css
+++ b/src/tuiter/edit-profile/index.css
@@ -26,3 +26,8 @@
     background: rgba(0, 0, 0, 0.5);
     color: white;
 }
+
+.form-control::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: black;
+    opacity: 1; /* Firefox */
+}
