--- a/src/tuiter/profile/index.css
+++ b/src/tuiter/profile/index.css
@@ -2,3 +2,13 @@
     bottom: -50px;
     left: 20px
 }
+
+.form-control::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: black;
+    opacity: 1; /* Firefox */
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: black;
+    opacity: 1; /* Firefox */
+}
