--- a/src/tuiter/home/index.css
+++ b/src/tuiter/home/index.css
@@ -1,3 +1,9 @@
-.word-break{
-    word-break: break-all;
+.form-control::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: black;
+    opacity: 1; /* Firefox */
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: black;
+    opacity: 1; /* Firefox */
 }
